auto-test/tests/chapter_18/invalid_types/scalar_required/assign_null_ptr_to_struct.c
struct s {
  int a;
};

struct s x = {1};

int main(void) {
  
  
  x = 0;
  return 0;
}